# social-media-agent-lounge

./: .env.example  .gitignore  CREATE_NEW_REPO.md  FIX_GIT_PERMISSIONS.md  FIX_OPENTELEMETRY_ERROR.md  README.md  app.py  fix_opentelemetry.sh  pyproject.toml  social_agents.py  social_media_site.py  social_tools.py  social_ui.py  stock_assistant_chatbot.py
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  STOCK_ASSISTANT_README.md  requirements.txt  stock_assistant_chatbot.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  RESEARCH_ASSISTANT_FLOW.md  deploy.sh  requirements.txt  research_assistant.py  social_ui.py
2_openai/community_contributions/customer_care_agents/: testagentman.ipynb
2_openai/hf_space_social_media/: README.md
3_crew/man_debate/: README.md  fix_researcher.py  fix_topic_variable.py  pyproject.toml  run_crew_direct.py
3_crew/man_debate/output/: decide.md  oppose.md  propose.md
3_crew/mycodegen/: README.md  pyproject.toml  report.md  restaurant_list.txt  restaurants_output.txt
3_crew/mycodegen/output/: correct_code_and_output.txt
3_crew/mycodegen/src/mycodegen/: crew.py  main.py
3_crew/mycodegen/src/mycodegen/config/: agents.yaml  tasks.yaml
3_crew/myeng_team/: README.md  pyproject.toml
3_crew/myeng_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/myeng_team/src/myeng_team/: crew.py  main.py
3_crew/myeng_team/src/myeng_team/config/: agents.yaml  tasks.yaml
3_crew/myfinances/: FIX_CREWAI_COMMAND.md  README.md  SETUP_CURSOR_ENV.md  SETUP_ENV.md  pyproject.toml  report.md
3_crew/myfinances/output/: report.md
3_crew/myfinances/src/myfinances/: crew.py  main.py
3_crew/myfinances/src/myfinances/config/: agents.yaml  tasks.yaml
3_crew/mystocks/: README.md  pyproject.toml
3_crew/mystocks/memory/: chroma.sqlite3  long_term_memory_storage.db
4_langgraph/: 3_lab3.ipynb  memory.db-shm  memory.db-wal
guides/community_contributions/: Stockgenius.ipynb  Testchat.ipynb  asyncio.ipynb  requirements.txt
setup/: SETUP-node.md
(+16 files in other folders)
