[project]
name = "mycodegen"
version = "0.1.0"
description = "mycodegen using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
mycodegen = "mycodegen.main:run"
run_crew = "mycodegen.main:run"
train = "mycodegen.main:train"
replay = "mycodegen.main:replay"
test = "mycodegen.main:test"
run_with_trigger = "mycodegen.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
