[project]
name = "myfinances"
version = "0.1.0"
description = "myfinances using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "opentelemetry-api>=1.34.0,<1.35.0",
    "opentelemetry-sdk>=1.34.0,<1.35.0",
    "opentelemetry-exporter-otlp-proto-http>=1.34.0,<1.35.0",
    "opentelemetry-exporter-otlp-proto-common>=1.34.0,<1.35.0",
]

[project.scripts]
myfinances = "myfinances.main:run"
run_crew = "myfinances.main:run"
train = "myfinances.main:train"
replay = "myfinances.main:replay"
test = "myfinances.main:test"
run_with_trigger = "myfinances.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
